[package]
name = "yew-image-drop"
version = "0.1.0"
edition = "2021"

[dependencies]
yew = { version = "0.21.0", features = ["csr"] }
yew-hooks = "0.3.1"
yewdux = "0.10.0"
wasm-bindgen = "0.2"
gloo-console = "0.3.0"
unique_id = "0.1.5"

[dependencies.web-sys]
version = "0.3"
features = [
  "File", 
  "Event", 
  "EventTarget",
  "HtmlElement",
  "HtmlImageElement",
  "HtmlDivElement",
  "DomRect",
  "HtmlCanvasElement",
  "CanvasRenderingContext2d",
  "CanvasPattern",
  "ImageData",
  "ImageBitmap",
  "SvgMatrix"
 ]

[dev-dependencies.web-sys]
version = "0.3"
